# metasync

./: .gitignore  README.md  pyproject.toml
metabase/: interface.py  model.py  serde.py  sync.py
metabase/mbql/: query.py
tests/: __init__.py
